--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
         "analytics"
     ],
     "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Secuoyas-Experience/gatsby-plugin-leadfeeder"
+    },
     "scripts": {
         "build": "babel src --out-dir ."
     }
